Update styles.css for add white-space : pre-line

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ body {
   padding: 5px 65px;
   box-sizing: border-box;
   overflow: hidden;
+  white-space: pre-line;
 }
 
 .cardn img:nth-of-type(2) {
@@ -77,6 +78,7 @@ body {
   box-sizing: border-box;
   overflow: hidden;
   color: #bc6c71;
+  white-space: pre-line;
 }
 
 .cardk {
@@ -89,6 +91,7 @@ body {
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   text-align: left;
   overflow: hidden;
+  white-space: pre-line;
 }
 
 .cardk img {
