modify cardk-text padding

--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ body {
   width: 1000px;
   height: 150px;
   font-size: 13px;
-  padding: 70px;
+  padding: 2px 70px;
   box-sizing: border-box;
 }
 
