--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 
 .cardn {
   width: 500px;
-  height: 400px;
+  height: 375px;
   background-color: #f4f2f1;
   margin-bottom: 0px;
   box-sizing: border-box;
@@ -84,20 +84,18 @@ body {
 
 .cardk {
   width: 1000px;
-  height: flex;
+  height: auto;
   background-color: #f4f2f1;
   margin: 0px 0;
   box-sizing: border-box;
   border-radius: 8px;
   text-align: left;
   overflow: hidden;
-  white-space: pre-line;
 }
 
 .cardk img {
   height: 100px;
   width: 1000px;
-  max-width: 100%;
   object-fit: contain;
   display: block;
   margin: 0;
@@ -107,10 +105,9 @@ body {
   width: 1000px;
   height: flex;
   font-size: 13px;
-  padding: 0px 70px;
+  padding: 2px 70px;
   box-sizing: border-box;
   word-break: keep-all;
-
 }
 
 .cardk-wrapper {
