--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
   width: 500px;
   height: 400px;
   background-color: #f4f2f1;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   box-sizing: border-box;
   border-radius: 8px;
   overflow: hidden;
@@ -86,7 +86,7 @@ body {
   width: 1000px;
   height: flex;
   background-color: #f4f2f1;
-  margin: 20px 0;
+  margin: 0px 0;
   box-sizing: border-box;
   border-radius: 8px;
   text-align: left;
@@ -96,7 +96,7 @@ body {
 
 .cardk img {
   height: 100px;
-  width: auto;
+  width: 1000px;
   max-width: 100%;
   object-fit: contain;
   display: block;
@@ -107,7 +107,7 @@ body {
   width: 1000px;
   height: flex;
   font-size: 13px;
-  padding: 2px 70px;
+  padding: 0px 70px;
   box-sizing: border-box;
   word-break: keep-all;
 
